@@ -54,7 +54,10 @@ module Sequel
       # Create a new dataset from the dataset (which won't
       # be nulled) to get the columns if they aren't already cached.
       def columns
-        @columns ||= db.dataset.clone(@opts).columns
+        if cols = cache_get(:columns)
+          return cols
+        end
+        cache_set(:columns, db.dataset.clone(@opts).columns)
       end
 
       # Return 0 without sending a database query.
